--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -19,7 +19,7 @@ jobs:
     name: hello-job
     runs-on: ubuntu-latest
     steps:
-      - name: Echo Text
+      - name: Echo text
         run: |
           echo "Hello, World!"
     
